# genetic_progr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.cfg  demo_cases.ipynb  help.out
data/: bio.cfg  circles.cfg  model_bio.mm  model_bio.mm.p  model_circles.mm  model_circles.mm.p  model_sin.mm  model_sin.mm.p  sin.cfg  x_test_circles.csv  x_test_sin.csv  xy_train_circles.csv  xy_train_sin.csv  y_pred_bio.csv  y_pred_circles.csv  y_pred_sin.csv
include/: brackets.h  common_0.h  common_ttrees.h  metrics.h  tel.h  tfunc.h  tpd.h  ttk.h  ttree.h  ttrees.h
src/: .vimrc  _config.h.in  genetic_progr.cpp  gmon.out  tel.cpp  tpd.cpp  ttk.cpp  ttree.cpp  ttrees.cpp
